# ChainSign

./: .gitignore  LICENSE  Makefile  README.md  build.bat  chainsign.py  chainsign.spec  database.py  installer.iss  models.py  namecoin.conf  pyproject.toml  requirements.txt  setup.py  timestamper.py  updater.py  utils.py  workers.py
assets/: assets.py  assets.qrc  assets.rcc
gui/: __init__.py  about.ui  mainwindow.ui
