[tool.poetry]
name = "chainsign"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
PySide2 = "^5.14"
python-bitcoinrpc = "^1.0"
requests = "^2.23"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pyinstaller = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
